Added new references

--- a/di-biblio.bib
+++ b/di-biblio.bib
@@ -533,6 +533,29 @@
 	Title = {A System of Interaction and Structure {V}: {T}he Exponentials and Splitting},
 	Year = 2009}
 
+@unpublished{BrusGuglGundPari:09:Quasip:fk,
+	Author = {Bruscoli, Paola and Guglielmi, Alessio and Gundersen, Tom and Parigot, Michel},
+	Date-Added = {2009-03-25 12:29:53 +0100},
+	Date-Modified = {2009-04-05 09:28:13 +0200},
+	Keywords = {deep inference},
+	Note = {Accepted by LPAR-16. \url{http://cs.bath.ac.uk/ag/p/QPNDI.pdf}},
+	Title = {A Quasipolynomial Cut-Elimination Procedure in Deep Inference via Atomic Flows and Threshold Formulae},
+	Year = {2010}}
+
+@unpublished{GuglGundStra::Breaking:uq,
+	Author = {Guglielmi, Alessio and Gundersen, Tom and Stra{\ss}burger, Lutz},
+	Keywords = {deep inference},
+	Note = {Accepted by LICS 2010. \url{http://cs.bath.ac.uk/ag/p/BPAF.pdf}},
+	Title = {Breaking Paths in Atomic Flows for Classical Logic},
+	Year = {2010}}
+
+@unpublished{GuglGundPari::A-Proof-:fk,
+	Author = {Guglielmi, Alessio and Gundersen, Tom and Parigot, Michel},
+	Keywords = {deep inference},
+	Note = {Accepted by RTA 2010.},
+	Title = {A Proof Calculus Which Reduces Syntactic Bureaucracy},
+	Year = {2010}}
+
 @inproceedings{GuglStra:02:A-Non-co:lq,
 	Author = {Guglielmi, Alessio and Stra{\ss}burger, Lutz},
 	Booktitle = {LPAR 2002},
