--- a/global_reductions/path_breaker.tex
+++ b/global_reductions/path_breaker.tex
@@ -2,6 +2,10 @@
 
 Given a derivation $\Phi$ and an atom $a$, the operator, $\PB$, defined in this section produces a derivation with the same premiss and conclusion as $\Phi$, which is weakly streamlined with respect to both $a$ and $\bar a$. This operator is a strict improvement over $\ISR$, since it does not require the input derivation to be in simple form, and it deals with the dual atoms in parallel. We will see later how a derivation containing $n$ atoms can be weakly streamlined by $n/2$ applications of $\PB$.
 
+\Tom{Added:}
+
+A variation of the results in this section is also presented in the paper \emph{Breaking Paths in Atomic Flows for Classical Logic} \cite{GuglGundStra::Breaking:uq}, which was coauthored with Alessio Guglielmi and Lutz Stra{\ss}burger.
+
 The operator is defined in terms of the following flow reduction.
 
 %--------------------------------
