--- a/global_reductions/threshold_formulae.tex
+++ b/global_reductions/threshold_formulae.tex
@@ -4,7 +4,7 @@ Recently, Je\v r\'abek showed that cut-free $\SKS$ proofs can be constructed in 
 
 The technique that Je\v r\'abek adopts is indirect because normalisation is performed over proofs in the sequent calculus, which are, in turn, related to deep-inference ones by polynomial simulations, originally studied in \cite{Brun:06:Deep-Inf:qy}.
 
-In \emph{Quasipolynomial Normalisation in Deep Inference via Atomic Flows and Threshold Formulae}, we demonstrated again Je\v r\'abek's result, still by adopting, essentially, the Atserias-Galesi-Pudl\'ak technique, and we improved on that as follows:
+In \cite{BrusGuglGundPari:09:Quasip:fk}, we demonstrated again Je\v r\'abek's result, still by adopting, essentially, the Atserias-Galesi-Pudl\'ak technique, and we improved on that as follows:
 \begin{enumerate}
 %---------------------------------------
 \item we significantly simplified the technicalities associated with the use of threshold functions, in particular the formulae and derivations that we adopted were simpler than those in \cite{AtseGalePudl:02:Monotone:yu};
