Der->Flow mapping is surjective

--- a/atomic_flows_and_derivations.tex
+++ b/atomic_flows_and_derivations.tex
@@ -218,7 +218,7 @@ Consider the rightmost derivation and its associated flow in Figure~\vref{figure
 \end{example}
 %------------
 
-We now show that the definition of atomic flows is `minimal', in the sense that every flow is associated with some derivation.
+We now show that the process of association of a flow to a derivation is `surjective', in the sense that every flow is associated with some derivation.
 
 It should be noted that the following result relies on the fact that both the formula structures of the premiss and conclusion, as well as all units occuring in the derivation, are ignored when extracting a flow. In particular, the derivation we construct in the following proof is `trivial', in the sense that it proves true from true. An example of this kind of construction can be seen in the first derivation of Figure~\vref{figure:ExampleAtomicFlows}.
 
